--- a/src/app/dashboard/shareddash/sidenavdash/sidenavdash.component.html
+++ b/src/app/dashboard/shareddash/sidenavdash/sidenavdash.component.html
@@ -1,6 +1,6 @@
 <mat-nav-list>
     <div class="logo py-1">
-      <img src="../../../../assets/img/logo_1.png" alt="Company Logo" />
+      <img src="../../../../assets/img/logo.jpeg" alt="Company Logo" />
     </div>
     <mat-divider></mat-divider>
     <h2 matSubheader class="mt-2">APPLICATIONS</h2>
