--- a/src/app/websites/login/login.component.html
+++ b/src/app/websites/login/login.component.html
@@ -14,7 +14,7 @@
 
                 <mat-form-field appearance="outline">
                   <mat-label class="label">Codigo</mat-label>
-                    <input matInput placeholder="Codigo" [(ngModel)]="loginData.userCode">
+                    <input matInput placeholder="Codigo" [(ngModel)]="loginData.userCode" autocomplete="off">
                 </mat-form-field>
 
 
