--- a/src/app/websites/view/servi/servi.component.html
+++ b/src/app/websites/view/servi/servi.component.html
@@ -7,10 +7,10 @@
       <div class="item slides active">
           <div class="slide-1"></div>
           <div class="hero">
-        
 
-                  <h1>SERVICES</h1>
-              
+
+                  <h1>SERVICIOS</h1>
+
 
           </div>
       </div>
@@ -22,18 +22,18 @@
       <div class="col-md-12">
           <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
               <div class="panel panel-default">
-                  
+
                   <mat-accordion class="panel-heading">
                       <mat-expansion-panel hideToggle>
                         <mat-expansion-panel-header  role="tab" id="headingThree" >
-                         
+
                           <mat-panel-description>
                             SERVIDORES
                           </mat-panel-description>
                         </mat-expansion-panel-header>
                         <p>This is the primary content of the panel.</p>
                       </mat-expansion-panel>
-                     
+
                     </mat-accordion>
               </div>
               <br>
@@ -41,24 +41,24 @@
                   <mat-accordion class="panel-heading">
                       <mat-expansion-panel hideToggle>
                         <mat-expansion-panel-header  role="tab" id="headingThree" >
-                         
+
                           <mat-panel-description>
                             SISTEMAS WEB
                           </mat-panel-description>
                         </mat-expansion-panel-header>
                         <p>This is the primary content of the panel.</p>
                       </mat-expansion-panel>
-                     
+
                     </mat-accordion>
               </div>
-            
+
                 <br>
                 <div class="panel panel-default">
                   <mat-accordion class="panel-heading">
                       <mat-expansion-panel hideToggle>
                         <mat-expansion-panel-header  role="tab" id="headingThree" >
                           <!--<mat-panel-title >
-                            
+
                           </mat-panel-title>-->
                           <mat-panel-description>
                             DESARROLLOS DE APP-MOVIL
@@ -66,10 +66,10 @@
                         </mat-expansion-panel-header>
                         <p>This is the primary content of the panel.</p>
                       </mat-expansion-panel>
-                     
+
                     </mat-accordion>
               </div>
-           
+
           </div>
       </div>
   </div>
