--- a/src/app/dashboard/create/listperson/listperson.component.html
+++ b/src/app/dashboard/create/listperson/listperson.component.html
@@ -1,63 +1,75 @@
-
-<div fxLayout fxLayoutAlign="center center" >
-
-  <mat-form-field fxFlex="40%" >
-
-    <input matInput type="text" (keyup)="applyFilter($event)" placeholder="Buscar"  #input >
-
-  </mat-form-field><mat-icon>search</mat-icon>
-
-  <a  class="nuevo" mat-flat-button color="primary"  routerLinkActive="list-item-active" routerLink="../createperson"><mat-icon inline=true  class="white-icon">group_add</mat-icon>NUEVO</a>
-
-
+<div class="main">
+<div class="toolbar">
+  <p>
+    <mat-toolbar class="example-spacer">
+  <span>PERSONAS</span>
+    </mat-toolbar>
+  </p>
 </div>
+  <div class="container">
+      <div  class="buscar">
+
+        <mat-form-field>
+
+          <input matInput type="text" (keyup)="applyFilter($event)" placeholder="Buscar"  #input >
+
+        </mat-form-field><mat-icon>search</mat-icon>
+
+        <a  class="nuevo" mat-flat-button color="primary"  routerLinkActive="list-item-active" routerLink="../createperson"><mat-icon inline=true  class="white-icon">group_add</mat-icon>NUEVO</a>
 
 
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+      </div>
+    <div class="tablero">
 
-  <!-- Position Column -->
-  <ng-container matColumnDef="numeroDocumento">
-    <th mat-header-cell *matHeaderCellDef> Codigo </th>
-    <td mat-cell *matCellDef="let element"> {{element.numeroDocumento}} </td>
-  </ng-container>
+        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
 
-  <!-- Name Column -->
-  <ng-container matColumnDef="nombreCompleto">
-    <th mat-header-cell *matHeaderCellDef> Nombre Completo </th>
-    <td mat-cell *matCellDef="let element"> {{element.nombreCompleto}} </td>
-  </ng-container>
+          <!-- Position Column -->
+          <ng-container matColumnDef="numeroDocumento">
+            <th mat-header-cell *matHeaderCellDef> Codigo </th>
+            <td mat-cell *matCellDef="let element"> {{element.numeroDocumento}} </td>
+          </ng-container>
 
-  <!-- Weight Column -->
-  <ng-container matColumnDef="cargo">
-    <th mat-header-cell *matHeaderCellDef> Cargo </th>
-    <td mat-cell *matCellDef="let element"> {{element.cargo.nombre}} </td>
-  </ng-container>
+          <!-- Name Column -->
+          <ng-container matColumnDef="nombreCompleto">
+            <th mat-header-cell *matHeaderCellDef> Nombre Completo </th>
+            <td mat-cell *matCellDef="let element"> {{element.nombreCompleto}} </td>
+          </ng-container>
 
-  <!-- Symbol Column -->
-  <ng-container matColumnDef="unidadOrganizacional">
-    <th mat-header-cell *matHeaderCellDef> Unidad Organizacional</th>
-    <td mat-cell *matCellDef="let element"> {{element.unidadOrganizacional.nombre}} </td>
-  </ng-container>
-    <!-- Symbol Column -->
-     <ng-container matColumnDef="gerencia">
-      <th mat-header-cell *matHeaderCellDef> Gerencia </th>
-      <td mat-cell *matCellDef="let element"> {{element.gerencia.nombre}} </td>
-    </ng-container>
-    <ng-container matColumnDef="Acciones">
-      <th mat-header-cell *matHeaderCellDef>Editar</th>
-      <td mat-cell *matCellDef="let element">
-        <a (click) = "upgradeUsuario(element)"  color="primary"><!---->
-          <mat-icon color="warn">border_color</mat-icon>
-        </a>
-      </td>
-    </ng-container>
+          <!-- Weight Column -->
+          <ng-container matColumnDef="cargo">
+            <th mat-header-cell *matHeaderCellDef> Cargo </th>
+            <td mat-cell *matCellDef="let element"> {{element.cargo.nombre}} </td>
+          </ng-container>
+
+          <!-- Symbol Column -->
+          <ng-container matColumnDef="unidadOrganizacional">
+            <th mat-header-cell *matHeaderCellDef> Unidad Organizacional</th>
+            <td mat-cell *matCellDef="let element"> {{element.unidadOrganizacional.nombre}} </td>
+          </ng-container>
+            <!-- Symbol Column -->
+            <ng-container matColumnDef="gerencia">
+              <th mat-header-cell *matHeaderCellDef> Gerencia </th>
+              <td mat-cell *matCellDef="let element"> {{element.gerencia.nombre}} </td>
+            </ng-container>
+            <ng-container matColumnDef="Acciones">
+              <th mat-header-cell *matHeaderCellDef>Editar</th>
+              <td mat-cell *matCellDef="let element">
+                <a (click) = "upgradeUsuario(element)"  color="primary"><!---->
+                  <mat-icon color="warn">border_color</mat-icon>
+                </a>
+              </td>
+            </ng-container>
 
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 
-  <!-- fila que se muestra cuando no hay datos -->
-   <tr class="mat-row" *matNoDataRow>
-    <td class="mat-cell" colspan="4">No hay datos que coincidan con el filtro "{{input.value}}"</td>
-  </tr>
-</table>
+          <!-- fila que se muestra cuando no hay datos -->
+          <tr class="mat-row" *matNoDataRow>
+            <td class="mat-cell" colspan="4">No hay datos que coincidan con el filtro "{{input.value}}"</td>
+          </tr>
+        </table>
+        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+    </div>
+  </div>
+</div>
