--- a/src/app/dashboard/create/listperson/listperson.component.scss
+++ b/src/app/dashboard/create/listperson/listperson.component.scss
@@ -1,4 +1,5 @@
 
+
   button.mat-button .mat-icon,
   a.mat-button .mat-icon,
   a.mat-stroked-button .mat-icon,
@@ -8,15 +9,29 @@
     font-size: 1.25em;
   }
 
+  .toolbar{
+    
+      margin-top: 1px; /* height of header */
+      padding: 0.8px;
+      height: 50px;
+  }
+  .example-spacer {
+     flex: 1 1 auto;
+    background-image: radial-gradient(circle at 95.14% 70.29%, #ffffff 0, #8092fd 15%, #3c78f2 50%, #0060e7 75%, #004cdc 100%);
+    color: #ffffff;
+    height: 20px;
+
+  }
+
 /* Structure */
 table {
-  margin-top: 10px; 
+  margin-top: 10px;
   width: 100%;
 }
 
-div{
+.buscar{
   height: 55px;
-  margin-top: 3px; 
+  margin-top: 3px;
   margin-right: auto;
    margin-left: auto;
    border-width:3px;
@@ -24,11 +39,18 @@ div{
    border-style:solid;
    border-radius: 5px;
   justify-content: space-around;
+  padding: 1px;
 }
  .nuevo{
- 
+
 		float:right;
     margin: 10px;
-    	
+
 }
- 
+
+.tablero{
+  max-height: auto;
+
+    padding: 30px;
+
+}
