--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -12,18 +12,18 @@
 
 
    </app-headerdash>
-
+<!--
    <div class="title">
     <a class="navbar-brand" href="javascript:void(0)" >{{getTitle()}}</a>
-  </div>
+  </div>   -->
 
 
-  <div class="main">
+ <!--    <div class="main">
+
+  </div> -->
 
   <router-outlet>
   </router-outlet>
-  </div>
-
 
 
   <app-footerdash></app-footerdash>
