--- a/src/app/websites/view/work/work.component.html
+++ b/src/app/websites/view/work/work.component.html
@@ -6,10 +6,10 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-6 offset-sm-3 mt-4 mb-4">
-            <h2 class="text-center">Experienced & Professional Team</h2>
+            <h2 class="text-center">Equipo Experimentado & Profecional</h2>
         </div>
     </div>
-  
+
     <div class="row">
         <div class="col-md-4">
             <div class="card-box text-center">
@@ -23,10 +23,10 @@
                 <p class="card-description">Telefono: 78945612</p>
                 <p class="card-description">Interno: 1245</p>
                 <hr>
-  
+
             </div>
         </div>
-  
+
         <div class="col-md-4">
             <div class="card-box text-center">
                 <div class="user-pic">
@@ -39,10 +39,10 @@
                 <p class="card-description">Telefono: 78945612</p>
                 <p class="card-description">Interno: 1245</p>
                 <hr>
-  
+
             </div>
         </div>
-  
+
         <div class="col-md-4">
             <div class="card-box text-center">
                 <div class="user-pic">
@@ -55,9 +55,8 @@
                 <p class="card-description">Telefono: 78945612</p>
                 <p class="card-description">Interno: 1245</p>
                 <hr>
-  
+
             </div>
         </div>
     </div>
   </div>
-  
