--- a/src/app/websites/login/login.component.html
+++ b/src/app/websites/login/login.component.html
@@ -10,17 +10,16 @@
 
           <mat-form-field appearance="outline">
             <mat-label class="label">Codigo de Usuario</mat-label>
-            <input matInput placeholder="Codigo" [(ngModel)]="loginData.userCode" autocomplete="off" required>
+            <input matInput placeholder="Codigo" [(ngModel)]="loginData.userCode" autocomplete="off">
           </mat-form-field>
 
           <mat-form-field appearance="outline">
             <mat-label class="label">Contraseña</mat-label>
-            <input matInput placeholder="Contraseña" [(ngModel)]="loginData.password" type="password" required>
+            <input matInput placeholder="Contraseña" [(ngModel)]="loginData.password" type="password">
           </mat-form-field>
 
           <div class="card-btns-flex mb-2">
-
-            
+           
             <button class="btn-text" (click)="openDialog()">Me olvidé mi contraseña</button>
             <button mat-raised-button class="btn btn-dark-moon" type="submit"  (click) = "onLogin()">Ingresar</button>
 
