--- a/src/app/dashboard/shareddash/sidenavdash/sidenavdash.component.html
+++ b/src/app/dashboard/shareddash/sidenavdash/sidenavdash.component.html
@@ -13,5 +13,11 @@
     <a mat-list-item routerLinkActive="unidadTecnica" routerLink="unidadTecnica">
       <mat-icon>group_add</mat-icon> UNIDAD TECNICA
     </a>
+    <a mat-list-item routerLinkActive="tipoOT" routerLink="tipoOT">
+            <mat-icon>settings_applications</mat-icon> TIPO OT
+    </a>
+    <a mat-list-item routerLinkActive="SubtipoOT" routerLink="SubtipoOT">
+      <mat-icon>settings_applications</mat-icon> SUBTIPO OT
+    </a>
 
 </mat-nav-list>
