--- a/src/app/websites/login/login.component.html
+++ b/src/app/websites/login/login.component.html
@@ -1,32 +1,58 @@
-
 <div class="container">
   <div class="row">
 
-    <div  class="col-lg-6 col-xl-6 mx-auto">
-      <div class="card my-5 shadow overflow-hidden">
-        <!-- <div class="card-img-left d-none d-md-flex">        </div> --> 
-        <div class="card-body p-sm-2">
-          <h5 class="card-title text-center fs-3">Iniciar Sesión</h5>
 
-          <mat-form-field appearance="outline">
-            <mat-label class="label">Codigo de Usuario</mat-label>
-            <input matInput placeholder="Codigo" [(ngModel)]="loginData.userCode" autocomplete="off">
-          </mat-form-field>
+  <div  class="col-lg-6 col-xl-6 mx-auto">
+    <div class="card flex-row my-5 border-0 shadow rounded-3 overflow-hidden">
+      <div class="card-img-left d-none d-md-flex">
 
-          <mat-form-field appearance="outline">
-            <mat-label class="label">Contraseña</mat-label>
-            <input matInput placeholder="Contraseña" [(ngModel)]="loginData.password" type="password">
-          </mat-form-field>
-
-          <div class="card-btns-flex mb-2">
-           
-            <button class="btn-text" (click)="openDialog()">Me olvidé mi contraseña</button>
-            <button mat-raised-button class="btn btn-dark-moon" type="submit"  (click) = "onLogin()">Ingresar</button>
-
-          </div>
-
-        </div>
       </div>
+        <div lass="card-body p-4 p-sm-5">
+          <h5 class="card-title text-center mb-5 fw-light fs-5">INICIO SESION</h5>
+
+
+
+                <mat-form-field appearance="outline">
+                  <mat-label class="label">Codigo</mat-label>
+                    <input matInput placeholder="Codigo" [(ngModel)]="loginData.userCode" autocomplete="off">
+                </mat-form-field>
+
+
+                <mat-form-field appearance="outline">
+                  <mat-label class="label">Contraseña</mat-label>
+                <input matInput placeholder="Contraseña" [(ngModel)]="loginData.password" type="password">
+            </mat-form-field>
+
+
+            <div class="d-grid mb-2">
+
+                <button mat-raised-button class="col btn btn-dark-moon btn-rounded" type="submit"  (click) = "onLogin()">Ingresar</button>
+
+            </div>
+
+
     </div>
-  </div> 
-</div>
+    </div>
+    </div>
+  </div>
+</div> 
+
+<!-- <mat-card class="mat-elevation-z8">
+
+  <span class="text">LOGIN</span>
+
+
+
+  <br>
+  <mat-form-field appearance="outline">
+    <mat-label>CODIGO USUARIO</mat-label>
+      <input matInput placehoder="Codigo"[(ngModel)]="loginData.userCode" >
+  </mat-form-field>
+  <br>
+  <mat-form-field appearance="outline">
+    <mat-label>CONTRASEÑA</mat-label>
+      <input matInput placehoder="Contraseña"  [(ngModel)]="loginData.password"  type="password">
+  </mat-form-field>
+      <button mat-raised-button color="primary" (click) = "onLogin()">Iniciar Sesion</button>
+</mat-card>
+ -->
