--- a/src/app/websites/login/login.component.scss
+++ b/src/app/websites/login/login.component.scss
@@ -6,10 +6,10 @@
   }
 
   .card-title{
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-  font-weight: 700;
-  font-family: "Roboto";
+
+  font-weight: 900;
+ 
+  font-family: "Homer Simpson UI";
   }
   mat-form-field{
     width: 80%;
@@ -22,14 +22,6 @@
 
   }
 
-.card-btns-flex {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
-}
-
  
 .card-img-left {
   width: 45%;
@@ -37,29 +29,21 @@
   background-size: 140%;
 }
 
-.btn-text {
-  background: none;
-  border: none;
-  color: #3e8cd6;
-}
-.btn-text:hover{
-  color: #01084C;
-}
-
 .btn-dark-moon {
-  background: #01084C;  /* fallback for old browsers */
-  background: linear-gradient(90deg, #01084C 60%, #01096C 100%);
+  background: #141E30;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #243B55, #141E30);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #243B55, #141E30); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   color: #fff;
+  border: 3px solid #eee;
 }
 
 .btn-dark-moon:hover{
-  background: linear-gradient(90deg, #1e4e85 10%, #3e8cd6 99%);
+  background: #084bff;/* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  
 }
-
-
 .label{
   font-weight: lighter;
-  font-size: 14px;
+  font-size: 12px;
   font-weight: 700;
 }
 
