--- a/src/app/websites/shared/header/header.component.html
+++ b/src/app/websites/shared/header/header.component.html
@@ -1,5 +1,5 @@
 
-<mat-toolbar class="my-nav-bar">
+<mat-toolbar color="primary">
     <div fxHide.gt-xs>
         <button mat-icon-button (click)="onToggleSidenav()">
             <mat-icon>menu</mat-icon>
@@ -23,14 +23,14 @@
                 <a routerLink="servi">Servicios</a>
             </li>
             <li>
-              <a routerLink="work">Equipo</a>
+              <a routerLink="work">Equipo Trabajo</a>
            </li>
         </ul>
     </div>
     <div fxFlex fxLayout fxLayoutAlign="end" fxHide.xs>
       <ul fxLayout  class="navigation-items">
           <li>
-              <a routerLink="login">Iniciar Sesion</a>
+              <a routerLink="login">Inicio Sesion</a>
           </li>
 
       </ul>
