--- a/src/app/dashboard/persona/listperson/listperson.component.html
+++ b/src/app/dashboard/persona/listperson/listperson.component.html
@@ -36,9 +36,9 @@
           </ng-container>
 
           <!-- Weight Column -->
-          <ng-container matColumnDef="correo">
-            <th mat-header-cell *matHeaderCellDef> Correo </th>
-            <td mat-cell *matCellDef="let element"> {{element.correo}} </td>
+          <ng-container matColumnDef="cargo">
+            <th mat-header-cell *matHeaderCellDef> Cargo </th>
+            <td mat-cell *matCellDef="let element"> {{element.cargo.nombre}} </td>
           </ng-container>
 
           <!-- Symbol Column -->
@@ -46,15 +46,19 @@
             <th mat-header-cell *matHeaderCellDef> Unidad Organizacional</th>
             <td mat-cell *matCellDef="let element"> {{element.unidadOrganizacional.nombre}} </td>
           </ng-container>
-
-          <ng-container matColumnDef="Acciones">
-            <th mat-header-cell *matHeaderCellDef>Editar</th>
-            <td mat-cell *matCellDef="let element">
-              <a (click) = "upgradeUsuario(element)"  color="primary"><!---->
-                <mat-icon color="warn">border_color</mat-icon>
-              </a>
-            </td>
-          </ng-container>
+            <!-- Symbol Column -->
+            <ng-container matColumnDef="gerencia">
+              <th mat-header-cell *matHeaderCellDef> Gerencia </th>
+              <td mat-cell *matCellDef="let element"> {{element.gerencia.nombre}} </td>
+            </ng-container>
+            <ng-container matColumnDef="Acciones">
+              <th mat-header-cell *matHeaderCellDef>Editar</th>
+              <td mat-cell *matCellDef="let element">
+                <a (click) = "upgradeUsuario(element)"  color="primary" matTooltip="EDITAR">
+                  <mat-icon color="warn">border_color</mat-icon>
+                </a>
+              </td>
+            </ng-container>
 
 
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
