--- a/src/app/dashboard/unidadtecnica/listar/unidatecnica.component.html
+++ b/src/app/dashboard/unidadtecnica/listar/unidatecnica.component.html
@@ -52,7 +52,7 @@
     <ng-container matColumnDef="Acciones">
       <th mat-header-cell *matHeaderCellDef>Editar</th>
       <td mat-cell *matCellDef="let element">
-        <a (click) = "upgradeUnidadTecnica(element)"  color="primary">
+        <a (click) = "upgradeUnidadTecnica(element)"  color="primary" matTooltip="EDITAR">
           <mat-icon color="warn">border_color</mat-icon>
         </a>
       </td>
