--- a/src/app/dashboard/usuario/listusers/listusers.component.html
+++ b/src/app/dashboard/usuario/listusers/listusers.component.html
@@ -51,9 +51,11 @@
     <ng-container matColumnDef="Acciones">
       <th mat-header-cell *matHeaderCellDef> Editar </th>
       <td mat-cell *matCellDef="let element">
-        <a (click) = "upgradeUser(element)" color="primary">
-          <mat-icon color="warn">border_color</mat-icon>
+        <a (click) = "upgradeUser(element)" color="primary" matTooltip="EDITAR">
+
+          <mat-icon color="warn" >border_color</mat-icon>
         </a>
+
       </td>
     </ng-container>
 
