--- a/src/app/websites/login/restore-password/restore-password.component.html
+++ b/src/app/websites/login/restore-password/restore-password.component.html
@@ -3,14 +3,17 @@
   <div mat-dialog-content>
     <p>Por favor, ingrese su correo y su número de documento para que le enviemos su nueva contraseña.</p>
     <div class="dialog-form-flex">
-      <mat-form-field appearance="outline">
-        <mat-label>Correo</mat-label>
-        <input matInput [(ngModel)]="correo" type="email" required name="correo">
-      </mat-form-field>
+      
       <mat-form-field appearance="outline">
         <mat-label>Numero de Documento</mat-label>
         <input matInput [(ngModel)]="numDoc" required name="numDoc">
       </mat-form-field>
+      
+      <mat-form-field appearance="outline">
+        <mat-label>Correo</mat-label>
+        <input matInput [(ngModel)]="correo" type="email" name="correo">
+      </mat-form-field>
+      
     </div>
   </div>
   <div mat-dialog-actions>
