añadido spinner al cargar el correo

--- a/src/app/websites/login/restore-password/restore-password.component.html
+++ b/src/app/websites/login/restore-password/restore-password.component.html
@@ -1,20 +1,24 @@
 <h1 mat-dialog-title>Recuperar Contraseña</h1>
 <form>
   <div mat-dialog-content>
-    <p>Por favor, ingrese su correo y su número de documento para que le enviemos su nueva contraseña.</p>
+    <p>Por favor, ingrese su número de documento y revise si el correo que aparece es el suyo. A ese destino se le enviará su nueva contraseña.</p>
     <div class="dialog-form-flex">
       <mat-form-field appearance="outline">
-        <mat-label>Correo</mat-label>
-        <input matInput [(ngModel)]="correo" type="email" required name="correo">
-      </mat-form-field>
-      <mat-form-field appearance="outline">
         <mat-label>Numero de Documento</mat-label>
-        <input matInput [(ngModel)]="numDoc" required name="numDoc">
+        <input matInput [(ngModel)]="numDoc" required name="numDoc" (input)="onUserCodeInput()">
       </mat-form-field>
+      
+      <p>Correo:</p>
+      <div class="show-mat-spinner">
+        <mat-spinner  *ngIf="showSpinner" [diameter]="30"></mat-spinner>
+      </div>
+      
+      <p>{{correo}}</p>
+
     </div>
   </div>
   <div mat-dialog-actions>
     <button mat-button (click)="cancel()">Cancelar</button>
-    <button mat-button (click)="sendEmail()" type="submit" cdkFocusInitial>Enviar</button>
+    <button mat-button (click)="sendEmail()" type="submit" [disabled]="disabledSendButton" cdkFocusInitial>Enviar</button>
   </div>
 </form>
