crud de tipo y subtipo
editar y guardar de tipo y sub tipo, ERROR

--- a/src/app/dashboard/persona/editperfil/editperfil.component.html
+++ b/src/app/dashboard/persona/editperfil/editperfil.component.html
@@ -34,7 +34,7 @@
 
               <br>
               <label class="title"> Correo: </label>
-              <input readonly type="text" value="{{list.getUserResponse.persona.correo}}" />  
+              <input readonly type="text" value="{{list.getUserResponse.persona.correo}}" />
 
               <br>
               <label class="title"> Cargo: </label>
@@ -72,7 +72,7 @@
             <mat-expansion-panel style="background-color: #D6EAF8;" >
                 <mat-expansion-panel-header fxLayoutAlign="center none" >
                     <mat-panel-title style="color: blue;" >
-                        Cambiar Contraseña
+                      CAMBIAR CONTRASEÑA
                     </mat-panel-title>
                 </mat-expansion-panel-header>
                 <app-password></app-password>
