--- a/src/app/dashboard/persona/password/password.component.html
+++ b/src/app/dashboard/persona/password/password.component.html
@@ -1,23 +1,25 @@
-<form [formGroup]="resetPasswordForm" (ngSubmit)="onSubmit()" class="add-field" ><!-- "handleOk()" -->
- <div class="input-row" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="10px" fxLayoutGap.lt-md="10px">
-  <div class="form-group">
-  <mat-form-field>
-      <mat-label for="currentPassword">Contraseña Actual</mat-label>
-      <input matInput type="password" class="form-control" id="oldPassword" formControlName="oldPassword">
+<form [formGroup]="resetPasswordForm" (ngSubmit)="onSubmit()" class="add-field" >
+  <div class="input-row" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="10px" fxLayoutGap.lt-md="10px">
 
-  </mat-form-field>
-  </div>
-  <div class="form-group">
-      <mat-form-field>
-      <mat-label for="newPassword">Nueva Contraseña</mat-label>
-      <input matInput type="password" class="form-control" id="newPassword" formControlName="newPassword">
 
-    </mat-form-field>
-  </div>
+   <div >
+   <mat-form-field>
+       <mat-label >Contraseña Actual</mat-label>
+       <input matInput type="password"  id="oldPassword" formControlName="oldPassword">
 
-  
-  <button mat-icon-button fxShow.lt-sm   type="submit" class="btn btn-primary" >
-    <mat-icon class="mat-18">save</mat-icon></button>
-  
-</div>
-</form>
+   </mat-form-field>
+   </div>
+   <div >
+       <mat-form-field>
+       <mat-label >Nueva Contraseña</mat-label>
+       <input matInput type="password" id="newPassword" formControlName="newPassword">
+
+     </mat-form-field>
+   </div>
+
+
+   <button mat-icon-button fxShow.lt-sm   type="submit" class="btn btn-primary" >
+     <mat-icon class="mat-18">save</mat-icon></button>
+
+ </div>
+ </form>
