--- a/src/app/dashboard/shareddash/sidenavdash/sidenavdash.component.html
+++ b/src/app/dashboard/shareddash/sidenavdash/sidenavdash.component.html
@@ -1,17 +1,23 @@
 <mat-nav-list>
-    <div class="logo py-1">
-      <img src="../../../../assets/img/logo.jpeg" alt="Company Logo" />
-    </div>
-    <mat-divider></mat-divider>
-    <h2 matSubheader class="mt-2">APPLICATIONS</h2>
-    <a mat-list-item routerLinkActive="listperson" routerLink="listperson">
-      <mat-icon>account_circle</mat-icon> PERSONAS
-    </a>
-    <a mat-list-item routerLinkActive="listusers" routerLink="listusers">
-      <mat-icon>assignment_ind</mat-icon> USUARIOS
-    </a>
-    <a mat-list-item routerLinkActive="unidadTecnica" routerLink="unidadTecnica">
-      <mat-icon>group_add</mat-icon> UNIDAD TECNICA
-    </a>
+  <div class="logo py-1">
+    <img src="../../../../assets/img/logo.jpeg" alt="Company Logo" />
+  </div>
+  <mat-divider></mat-divider>
+  <h2 matSubheader class="mt-2">APPLICATIONS</h2>
+  <a mat-list-item routerLinkActive="listperson" routerLink="listperson">
+    <mat-icon>account_circle</mat-icon> PERSONAS
+  </a>
+  <a mat-list-item routerLinkActive="listusers" routerLink="listusers">
+    <mat-icon>assignment_ind</mat-icon> USUARIOS
+  </a>
+  <a mat-list-item routerLinkActive="unidadTecnica" routerLink="unidadTecnica">
+    <mat-icon>group_add</mat-icon> UNIDAD TECNICA
+  </a>
+  <a mat-list-item routerLinkActive="tipoOT" routerLink="tipoOT">
+          <mat-icon>settings_applications</mat-icon> TIPO OT
+  </a>
+  <a mat-list-item routerLinkActive="SubtipoOT" routerLink="SubtipoOT">
+    <mat-icon>settings_applications</mat-icon> SUBTIPO OT
+  </a>
 
 </mat-nav-list>
