--- a/src/app/dashboard/tiposOT/crear/crear-tipo.component.html
+++ b/src/app/dashboard/tiposOT/crear/crear-tipo.component.html
@@ -25,9 +25,9 @@
                           </mat-form-field> -->
                           <mat-form-field fxFlex appearance="outline">
                             <mat-label class="label">Unidad Tecnica</mat-label>
-                            <mat-select [(ngModel)]="selectedUnidad"  formControlName="unidadTecnica">
-                              <mat-option *ngFor="let unidadTecnica of unidadTecnicas" [value]="unidadTecnica.idDptoTecnico">
-                                {{unidadTecnica.nombre}}
+                            <mat-select (selectChange)="cargarusuario()" [(ngModel)]="selectedUnidad"  formControlName="IdDptoTecnico">
+                              <mat-option *ngFor="let IdDptoTecnico of unidadTecnicas" [value]="IdDptoTecnico.idDptoTecnico">
+                                {{IdDptoTecnico.nombre}}
                               </mat-option>
                             </mat-select>
                           </mat-form-field>
