--- a/src/app/dashboard/tiposOT/modificar/modificar-tipo.component.html
+++ b/src/app/dashboard/tiposOT/modificar/modificar-tipo.component.html
@@ -25,9 +25,9 @@
  -->
         <mat-form-field fxFlex appearance="outline">
           <mat-label class="label">Unidad Tecnica</mat-label>
-          <mat-select [(ngModel)]="selectedUnidad"  formControlName="unidadTecnica">
-            <mat-option *ngFor="let unidadTecnica of unidadTecnicas" [value]="unidadTecnica.idDptoTecnico">
-              {{unidadTecnica.nombre}}
+          <mat-select [(ngModel)]="selectedUnidad"  formControlName="IdDptoTecnico">
+            <mat-option *ngFor="let IdDptoTecnico of unidadTecnicas" [value]="IdDptoTecnico.idDptoTecnico">
+              {{IdDptoTecnico.nombre}}
             </mat-option>
           </mat-select>
         </mat-form-field>
@@ -38,9 +38,9 @@
      </mat-form-field> -->
      <mat-form-field fxFlex appearance="outline">
       <mat-label class="label">Usuario</mat-label>
-      <mat-select  [(ngModel)]="selectedUsuario"  formControlName="usuario">
-        <mat-option *ngFor="let usuario of usuarios" [value]="usuario.idUser">
-          {{usuario.persona.nombreCompleto}}
+      <mat-select  [(ngModel)]="selectedUsuario"  formControlName="IdUsrResponsable">
+        <mat-option *ngFor="let IdUsrResponsable of usuarios" [value]="IdUsrResponsable.idUser">
+          {{IdUsrResponsable.persona.nombreCompleto}}
         </mat-option>
       </mat-select>
     </mat-form-field>
