--- a/src/app/dashboard/subTipoOT/modificar/modificar-subtipo.component.scss
+++ b/src/app/dashboard/subTipoOT/modificar/modificar-subtipo.component.scss
@@ -12,7 +12,12 @@ a.mat-stroked-button .mat-icon {
   justify-content: center;
   align-items: center;
 }
-
+input{
+  font-family: Arial; font-size: 12pt; 
+  }
+  mat-select{
+    font-family: Arial; font-size: 12pt; 
+  }
 mat-dialog-content{
   border: 30px;
 }
