--- a/src/app/dashboard/tiposOT/crear/crear-tipo.component.html
+++ b/src/app/dashboard/tiposOT/crear/crear-tipo.component.html
@@ -25,21 +25,23 @@
                           </mat-form-field> -->
                           <mat-form-field fxFlex appearance="outline">
                             <mat-label class="label">Unidad Tecnica</mat-label>
-                            <mat-select (selectChange)="cargarusuario()" [(ngModel)]="selectedUnidad"  formControlName="IdDptoTecnico">
+                            <mat-select (valueChange)="cargarusuario($event)"  formControlName="IdDptoTecnico">
                               <mat-option *ngFor="let IdDptoTecnico of unidadTecnicas" [value]="IdDptoTecnico.idDptoTecnico">
                                 {{IdDptoTecnico.nombre}}
                               </mat-option>
                             </mat-select>
                           </mat-form-field>
+                          </div>
+                          <div class="input-row" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
                            <!-- <mat-form-field fxFlex appearance="outline">
                             <mat-label class="label">Usuario</mat-label>
                             <input matInput placeholder="Usuario" formControlName="IdUsrResponsable" autocomplete="off">
                           </mat-form-field> -->
                           <mat-form-field fxFlex appearance="outline">
                             <mat-label class="label">Usuario</mat-label>
-                            <mat-select  [(ngModel)]="selectedUsuario"  formControlName="usuario">
-                              <mat-option *ngFor="let usuario of usuarios" [value]="usuario.idUser">
-                                {{usuario.persona.nombreCompleto}}
+                            <mat-select  formControlName="IdUsrResponsable">
+                              <mat-option *ngFor="let IdUsrResponsable of usuarios" [value]="IdUsrResponsable.idUser">
+                                {{IdUsrResponsable.persona.nombreCompleto}}
                               </mat-option>
                             </mat-select>
                           </mat-form-field>
@@ -53,11 +55,12 @@
                           </mat-form-field> -->
                           <section class="example-section" >
 
-                            <p><mat-checkbox formControlName="TieneSubTipo">Tiene SubTipo</mat-checkbox></p>
+                            <p><mat-checkbox formControlName="TieneSubTipo" value="1" ng-false-value="0">Tiene SubTipo</mat-checkbox ></p>
 
                           </section>
-
-                          <mat-form-field fxFlex appearance="outline">
+                          </div>
+                          <div class="input-row" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
+                           <mat-form-field fxFlex appearance="outline">
                             <mat-label class="label">Estado</mat-label>
                             <mat-select formControlName="estado">
 
@@ -65,7 +68,14 @@
                                 {{estado.viewValue}}
                               </mat-option>
                             </mat-select>
-                          </mat-form-field>
+                          </mat-form-field> 
+                          <!-- <section class="example-section">
+                            <label class="example-margin">Align:</label>
+                            <mat-radio-group [(ngModel)]="labelPosition">
+                              <mat-radio-button class="example-margin" value="1">Activo</mat-radio-button>
+                              <mat-radio-button class="example-margin" value="2">Pasivo</mat-radio-button>
+                            </mat-radio-group>
+                          </section> -->
                         </div>
 
                         <div class="boton">
