--- a/src/app/dashboard/tiposOT/modificar/modificar-tipo.component.html
+++ b/src/app/dashboard/tiposOT/modificar/modificar-tipo.component.html
@@ -11,7 +11,8 @@
        <mat-label class="label">Tipo de OT</mat-label>
          <input matInput formControlName="idTipoOT" readonly onmousedown="return false;">
      </mat-form-field>
-
+     </div>
+     <div class="input-row" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
      <mat-form-field  fxFlex  appearance="outline">
        <mat-label class="label">Nombre Completo</mat-label>
        <input matInput placeholder="Nombre" formControlName="nombre" autocomplete="off">
@@ -25,22 +26,23 @@
  -->
         <mat-form-field fxFlex appearance="outline">
           <mat-label class="label">Unidad Tecnica</mat-label>
-          <mat-select [(ngModel)]="selectedUnidad"  formControlName="IdDptoTecnico">
-            <mat-option *ngFor="let IdDptoTecnico of unidadTecnicas" [value]="IdDptoTecnico.idDptoTecnico">
-              {{IdDptoTecnico.nombre}}
+          <mat-select [ngModel]="selectedUnidadTecnica.idDptoTecnico" formControlName="IdDptoTecnico">
+            <mat-option *ngFor="let UnidadTecnica of unidadTecnicas" [value]="UnidadTecnica.idDptoTecnico">
+              {{UnidadTecnica.nombre}}
             </mat-option>
           </mat-select>
         </mat-form-field>
-
+  </div>
+        <div class="input-row" fxLayout="row" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
      <!-- <mat-form-field fxFlex appearance="outline">
        <mat-label class="label">Usuario</mat-label>
        <input matInput placeholder="Usuario" formControlName="secuenciaOT" autocomplete="off">
      </mat-form-field> -->
      <mat-form-field fxFlex appearance="outline">
       <mat-label class="label">Usuario</mat-label>
-      <mat-select  [(ngModel)]="selectedUsuario"  formControlName="IdUsrResponsable">
-        <mat-option *ngFor="let IdUsrResponsable of usuarios" [value]="IdUsrResponsable.idUser">
-          {{IdUsrResponsable.persona.nombreCompleto}}
+      <mat-select [ngModel]="selectedUsuario.id" >
+        <mat-option *ngFor="let usuario of usuarios" [value]="usuario.idUser">
+          {{usuario.persona.nombreCompleto}}
         </mat-option>
       </mat-select>
     </mat-form-field>
